[#2716] Upgrade to camel-3.0.0.RC3